# crispy-waffle

./: .gitignore  CMakeLists.txt
rules/: sample - Copy.rules  sample.rules
src/: main.cpp
src/codebase/: base64_encoder.cpp  data_upload.cpp  dns_inspector.cpp  http_inspector.cpp  network_uploader.cpp  packet_inspector.cpp  process_manager.cpp  rule_engine.cpp  tcp_inspector.cpp  udp_inspector.cpp  utils.cpp
src/headers/: base64_encoder.h  data_upload.h  dns_inspector.h  http_inspector.h  network_headers.h  network_uploader.h  packet_inspector.h  process_manager.h  rule_engine.h  tcp_inspector.h  udp_inspector.h  utils.h
